* Thu Dic 17 7:48:00 CEST 1998

Another fix for common desktop
(this kbgwm_change event was really kbgwm_reconfigure)

* Tue Dic 15 7:20:00 CEST 1998

Oops, I thought this common desktop was already fixed. 
I hope now it is.

* Sat Dic 12 14:50:00 CEST 1998

Doing a workaround for resizing window bug

* Fri Dic 11 7:20:00 CEST 1998

Fixed CTRL-Q when menubar was hidden
Added left/right arrow movement
Now it's possible to hide desktop names

* Thu Dic 10 7:20:00 CEST 1998

Added sgml documentation

1998-12-07  Alex Zepeda  <garbanzo@hooked.net>

	* Removed unused variable.

* Fri Dic  4 7:20:00 CEST 1998

Finally implemented support for all the kbgndwm background modes
Some code beautified.
Raised version number to 0.9


* Wed Dic  2 7:23:00 CEST 1998

Many speed improvements, including reducing initialization
time (in some cases from 17 secs to 4 secs :) )
Some bug fixes which made kpager core dump in different
ways (really nobody noticed this ?)

* Tue Dic  1 7:23:00 CEST 1998

Improved speed when updating background pictures (thanks Matt for the new signal !)
Hopefully the last fixes to the resize of windows 
(Now you can use kpager to create the largest window ever in the world
by resizing it and moving the mouse to the lower-right corner of your
screen :) )

* Mon Nov 30 7:20:00 CEST 1998 

Some fixes.
Implemented the option to disable the behaviour of
one click => desktop change (as suggested by Alexxx)
Finished implementing the resize of windows
(If the already reported bug about resized windows
of other desktop is not solved, I'll have to disable
this before 1.1)

* Sun Nov 29 11:27:00 CEST 1998 

Some more work in the resizing of windows

* Fri Nov 27 22:00:00 CEST 1998 

Added "To Desktop" menu.

* Fri Nov 27 7:20:00 CEST 1998 

Implemented kbgndwm's ability to read wallpapers from a directory
Yet another "fix" for kpager not to need Qt-1.41
Some bug fixes

* Wed Nov 18 7:20:00 CEST 1998 

Added Popup menus when right clicking on a window or on desktop