@@ -1,3 +1,8 @@
+* Fri Dic 18 7:50:00 CEST 1998
+
+Fixed a bug that displayed junk in some circunstances in the 
+Desktop Name area when not showing names.
+
 * Thu Dic 17 7:48:00 CEST 1998
 
 Another fix for common desktop
